# microtris

./: .gitignore  README.md  flash-to-uno.sh
arduino-src/: arduino-src.ino  display.cpp  display.hpp  full_screen_attempt.ino
arduino-src/examples/: random_pixels.ino  smile.ino
python-src/: main.py
rust-src/: Cargo.toml  README.md
rust-src/src/: main.rs
